Fix jumping menu on slow connections

--- a/assets/css/ccss.css
+++ b/assets/css/ccss.css
@@ -406,6 +406,11 @@ img {
   .site-branding {
     padding: 3em 0;
   }
+/* fix jumping menu */
+    .custom-header {
+        min-height: 165px;
+        margin-bottom: 72px;
+    }
 }
 
 @media screen and (min-width:48em) {
